sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:3: error: not found: value l
  l=getValueCount()
  ^AlgGnomeSort:4: error: not found: value l
  for (i <- 0 to l){
                 ^